Salesforce CPQ/main/default/objects/PriceTier__c/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <description>Discount percentage applied when quantity falls in this tier.</description>
    <inlineHelpText>Discount percentage applied when quantity falls in this tier.</inlineHelpText>
    <label>Discount (%)</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>