Salesforce CPQ/main/default/objects/PriceTier__c/fields/OriginalDiscountTier__c.field-meta.xml
<CustomField>
    <fullName>OriginalDiscountTier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The discount tier where this price tier is originated from.</description>
    <inlineHelpText>The discount tier where this price tier is originated from.</inlineHelpText>
    <label>Original Discount Tier</label>
    <referenceTo>DiscountTier__c</referenceTo>
    <relationshipLabel>Price Tiers</relationshipLabel>
    <relationshipName>PriceTiers</relationshipName>
    <type>Lookup</type>
</CustomField>