Salesforce CPQ/main/default/objects/PriceTier__c/fields/PriceModel__c.field-meta.xml
<CustomField>
    <fullName>PriceModel__c</fullName>
    <description>The price model that determines how the prices are calculated.</description>
    <inlineHelpText>The price model that determines how the prices are calculated.</inlineHelpText>
    <label>Price Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PriceModel</valueSetName>
    </valueSet>
</CustomField>