Salesforce CPQ/main/default/objects/PriceTier__c/fields/PriceSchedule__c.field-meta.xml
<CustomField>
    <fullName>PriceSchedule__c</fullName>
    <description>Price Schedule to which this tier belongs.</description>
    <inlineHelpText>Price Schedule to which this tier belongs.</inlineHelpText>
    <label>Schedule</label>
    <referenceTo>PriceSchedule__c</referenceTo>
    <relationshipLabel>Price Tiers</relationshipLabel>
    <relationshipName>PriceTiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>