Salesforce CPQ/main/default/objects/PriceTier__c/fields/VolumnDiscount__c.field-meta.xml
<CustomField>
    <fullName>VolumnDiscount__c</fullName>
    <description>The total volume discount taken for this tier.</description>
    <inlineHelpText>The total volume discount taken for this tier.</inlineHelpText>
    <label>Volume Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>